--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </tr>
         <tr>
             <th colspan="5">
-                Lunch
+                LUNCH
             </th>
         </tr>
         <tr>
