--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
             <td>History</td>
             <td>English</td>
             <td>Social</td>
-            <td>Sports</td>
-            
+            <td>Sport</td>
         </tr>
         <tr>
             <th colspan="5">
