--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,21 +15,22 @@
         </thead>
         <tr>
             <th rowspan="7">
-                Hours
+                Hour
+                
             </th>
         </tr>
         <tr>
             <th>Mon</th>
             <th>Tue</th>
             <th>Web</th>
-            <th>Thu</th>
+            <th>Thur</th>
             <th>Fri</th>
         </tr>
         <tr>
             <td>Science</td>
             <td>Maths</td>
             <td>Science</td>
-            <td>Maths</td>
+            <td>Maths</td>git
             <td>Arts</td>
         </tr>
         <tr>
